Revise README for project setup instructions
Updated README to improve clarity and structure for installation and setup instructions on macOS and Windows.